--- a/index.html
+++ b/index.html
@@ -10,15 +10,28 @@
 </head>
 
 <body>
+    <!-- Header with name and Links to jump to sections -->
     <header>
         <h1>Maverick Wong</h1>
         <ul>
-            <li><a href="#">About Me</a></li>
-            <li><a href="#">Work</a></li>
-            <li><a href="#">Contact Me</a></li>
+            <li><a href="#about-me">About Me</a></li>
+            <li><a href="#sample-work">Sample Work</a></li>
+            <li><a href="#contact-me">Contact Me</a></li>
             <li><a href="#"></a></li>
         </ul>
     </header>
+
+    <!-- About Me -->
+    <section class="first " id="about-me">
+        <h2 class="sectionhead">About Me</h2>
+        <p>place holder text about me</p>
+        <img src="http://placehold.jp/150x150.png" alt="Placeholder Profile Image">
+    </section>
+
+    <!-- Sample Work  -->
+    <section>
+
+    </section>
 
 </body>
 </html>
