HTML Foundation groundwork

--- a/index.html
+++ b/index.html
@@ -15,23 +15,63 @@
         <h1>Maverick Wong</h1>
         <ul>
             <li><a href="#about-me">About Me</a></li>
-            <li><a href="#sample-work">Sample Work</a></li>
+            <li><a href="#my-work">My Work</a></li>
             <li><a href="#contact-me">Contact Me</a></li>
             <li><a href="#"></a></li>
         </ul>
     </header>
 
+    <section>
     <!-- About Me -->
-    <section class="first " id="about-me">
+    <article id="about-me">
         <h2 class="sectionhead">About Me</h2>
         <p>place holder text about me</p>
+        <!-- Picture of me -->
         <img src="http://placehold.jp/150x150.png" alt="Placeholder Profile Image">
-    </section>
+    </article>
 
     <!-- Sample Work  -->
-    <section>
+    <article id="my-work">
+        <h2 class="sectionhead">My Work</h2>
+        <!-- Need area for all web dev work w/titled images -->
+        <p>place holder text my-work</p>
+        <!-- First Work that will be bigger than the others in size -->
+        <div class="work" id="Big-Work">
+            <img src="http://placehold.jp/150x150.png" alt="Placeholder Image">
+            <figcaption>sample caption</figcaption>
+        </div>
+        <!-- Other applications developed -->
+        <div class="work">
+            <img src="http://placehold.jp/150x150.png" alt="Placeholder Image">
+            <figcaption>sample caption</figcaption>
+        </div>
+        <div class="work">
+            <img src="http://placehold.jp/150x150.png" alt="Placeholder Image">
+            <figcaption>sample caption</figcaption>
+        </div>
+        <div class="work">
+            <img src="http://placehold.jp/150x150.png" alt="Placeholder Image">
+            <figcaption>sample caption</figcaption>
+        </div>
+        <div class="work">
+            <img src="http://placehold.jp/150x150.png" alt="Placeholder Image">
+            <figcaption>sample caption</figcaption>
+        </div>
+    </article>
+
+    <!-- Contact Me -->
+    <article id="contact-me">
+        <h2 class="sectionhead">Contact Me</h2>
+        <p>place holder text contact me</p>
+        <!-- Include Phone,github,linkedin,misc -->
+        <ul>
+            <li>Phone Number</li>
+            <li>Linkdin</li>
+            <li>Github</li>
+            <li></li>
+        </ul>
+    </article>
 
     </section>
-
 </body>
 </html>
