--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Maverick Wong Portfolio</title>
+    <title>Maverick Wong's Portfolio</title>
     <link rel="stylesheet" href="./assets/css/style.css" />
 </head>
 
@@ -13,11 +13,10 @@
     <!-- Header with name and Links to jump to sections -->
     <header>
         <h1>Maverick Wong</h1>
-        <ul>
+        <ul class="nav">
             <li><a href="#about-me">About Me</a></li>
             <li><a href="#my-work">My Work</a></li>
             <li><a href="#contact-me">Contact Me</a></li>
-            <li><a href="#"></a></li>
         </ul>
     </header>
 
@@ -59,19 +58,21 @@
         </div>
     </article>
 
-    <!-- Contact Me -->
-    <article id="contact-me">
-        <h2 class="sectionhead">Contact Me</h2>
-        <p>place holder text contact me</p>
-        <!-- Include Phone,github,linkedin,misc -->
-        <ul>
-            <li>Phone Number</li>
-            <li>Linkdin</li>
-            <li>Github</li>
-            <li></li>
-        </ul>
-    </article>
-
-    </section>
+    
 </body>
+
+<!-- Contact Me -->
+<footer id="contact-me">
+    <h2 class="sectionhead">Contact Me</h2>
+    <p>place holder text contact me</p>
+    <ul>
+        <li>Phone Number</li>
+        <li><a href="">Linkdin</a></li>
+        <li><a href="">Github</a></li>
+        <li></li>
+    </ul>
+</footer>
+
+</section>
+
 </html>
