Updates to header formatting and Background image

--- a/index.html
+++ b/index.html
@@ -20,20 +20,24 @@
         </ul>
     </header>
 
-    <section>
+    <figure class="bg" alt= "background image"></figure> 
+
+    <main>
     <!-- About Me -->
     <article id="about-me">
-        <h2 class="sectionhead">About Me</h2>
-        <p>place holder text about me</p>
         <!-- Picture of me -->
         <img src="http://placehold.jp/150x150.png" alt="Placeholder Profile Image">
+        <div>
+        <h2 class="sectionhead">About Me</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+        </div>
     </article>
 
     <!-- Sample Work  -->
     <article id="my-work">
         <h2 class="sectionhead">My Work</h2>
         <!-- Need area for all web dev work w/titled images -->
-        <p>place holder text my-work</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
         <!-- First Work that will be bigger than the others in size -->
         <div class="work" id="Big-Work">
             <img src="http://placehold.jp/150x150.png" alt="Placeholder Image">
@@ -57,14 +61,13 @@
             <figcaption>sample caption</figcaption>
         </div>
     </article>
-
+    </main>
     
 </body>
 
 <!-- Contact Me -->
 <footer id="contact-me">
     <h2 class="sectionhead">Contact Me</h2>
-    <p>place holder text contact me</p>
     <ul>
         <li>Phone Number</li>
         <li><a href="">Linkdin</a></li>
@@ -72,7 +75,5 @@
         <li></li>
     </ul>
 </footer>
-
-</section>
 
 </html>
