formatted about me and added some photos

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Maverick Wong's Portfolio</title>
     <link rel="stylesheet" href="./assets/css/style.css" />
+    <link rel="icon" href="./assets/images/icon.png">
 </head>
 
 <body>
@@ -26,7 +27,7 @@
     <!-- About Me -->
     <article id="about-me">
         <!-- Picture of me -->
-        <img src="http://placehold.jp/150x150.png" alt="Placeholder Profile Image">
+        <img src="./assets/images/Profile.jpg" alt="Profile Image">
         <div>
         <h2 class="sectionhead">About Me</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
@@ -38,7 +39,7 @@
         <h2 class="sectionhead">My Work</h2>
         <!-- Need area for all web dev work w/titled images -->
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-        <!-- First Work that will be bigger than the others in size -->
+        <!-- Focus Work that will be bigger than the others in size -->
         <div class="work" id="Big-Work">
             <img src="http://placehold.jp/150x150.png" alt="Placeholder Image">
             <figcaption>sample caption</figcaption>
@@ -70,9 +71,9 @@
     <h2 class="sectionhead">Contact Me</h2>
     <ul>
         <li>Phone Number</li>
-        <li><a href="">Linkdin</a></li>
-        <li><a href="">Github</a></li>
-        <li></li>
+        <li><a href="https://www.linkedin.com/in/maverick-wong-4488b4241/" target="_blank">Linkdin</a></li>
+        <li><a href="https://github.com/maverickwong17" target="_blank">Github</a></li>
+        <li><img src="https://cdn-icons-png.flaticon.com/512/561/561127.png" alt="email image">wmaverick4@gmail.com</li>
     </ul>
 </footer>
 
