figure caption formatting :

--- a/index.html
+++ b/index.html
@@ -45,29 +45,35 @@
         <column class="sample">
         <!-- Focus Work that will be bigger than the others in size -->
         <figure class="work" id="Big-Work">
-            <a href="https://sufyaanvaidya.github.io/css-mini-project/" target="_blank">
-                <img src="./assets/images/css-snippets.png" alt="css-snippets"></a>
-            <figcaption>CSS snippet Colaboration</figcaption>
+            <img src="./assets/images/css-snippets.png" alt="css-snippets">
+            <figcaption>
+                <a href="https://sufyaanvaidya.github.io/css-mini-project/" target="_blank">
+                    CSS snippet Colaboration</a>
+            </figcaption>
         </figure>
         <figure id="small-work">
             <!-- Other applications developed -->
             <div class="work">
-                <a href="https://maverickwong17.github.io/code-refactor/" target="_blank">
-                    <img src="./assets/images/horiseon-refactoring.png" alt="Placeholder Image"></a>
-                <figcaption>Horiseon Code Refactoring</figcaption>
+                <img src="./assets/images/horiseon-refactoring.png" alt="Placeholder Image">
+                <figcaption>
+                    <a href="https://maverickwong17.github.io/code-refactor/" target="_blank">
+                        Horiseon Code Refactoring</a>
+                </figcaption>
             </div>
             <div class="work">
-                <a href="https://maverickwong17.github.io/landing-page/" target="_blank">
-                    <img src="./assets/images/landing-page.png" alt="Placeholder Image"></a>
-                <figcaption>Landing Page</figcaption>
+                <img src="./assets/images/landing-page.png" alt="Placeholder Image"></a>
+                <figcaption>
+                    <a href="https://maverickwong17.github.io/landing-page/" target="_blank">
+                        Landing Page</a>
+                </figcaption>
             </div>
             <div class="work">
-                <a href="#"><img src="http://placehold.jp/150x150.png" alt="Placeholder Image"></a>
-                <figcaption>Placeholder</figcaption>
+                <img src="http://placehold.jp/150x150.png" alt="Placeholder Image">
+                <figcaption><a href="#">Placeholder</a></figcaption>
             </div>
             <div class="work">
-                <a href="#"><img src="http://placehold.jp/150x150.png" alt="Placeholder Image"></a>
-                <figcaption>Placeholder</figcaption>
+                <img src="http://placehold.jp/150x150.png" alt="Placeholder Image">
+                <figcaption><a href="#">Placeholder</a></figcaption>
             </div>
         </figure>
         </column>
