finalize css, may need to debug some

--- a/index.html
+++ b/index.html
@@ -68,11 +68,11 @@
                 </figcaption>
             </div>
             <div class="work">
-                <img src="http://placehold.jp/150x150.png" alt="Placeholder Image">
+                <img src="https://via.placeholder.com/400x200.png?text=Placeholder%20for%20other%20projects" alt="Placeholder Image">
                 <figcaption><a href="#">Placeholder</a></figcaption>
             </div>
             <div class="work">
-                <img src="http://placehold.jp/150x150.png" alt="Placeholder Image">
+                <img src="https://via.placeholder.com/400x200.png?text=Placeholder%20for%20other%20projects" alt="Placeholder Image">
                 <figcaption><a href="#">Placeholder</a></figcaption>
             </div>
         </figure>
