error on deployed page?

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <!-- About Me -->
     <article id="about-me">
         <!-- Picture of me -->
-        <img src="./assets/images/Profile.jpg" alt="Profile Image">
+        <img src="./assets/images/profile.jpg" alt="Profile Image">
         <div>
         <h2 class="sectionhead">About Me</h2>
         <p>I am an aspiring web developer who loves to work on logic puzzles.
